Fixed issue when toasts overlapped when multiple are opened

--- a/toast.css
+++ b/toast.css
@@ -15,7 +15,7 @@
   font-family: 'Helvetica-Neue', 'HelveticaNeue', arial, sans-serif;
   display: none;
   opacity: 0;
-  transition: opacity 0.4s
+  transition: opacity 0.8s
 }
 
 .toast-container.show{
